fix(homepage-header): avoid overflow on small screens
It's not perfect yet, but better than before.

--- a/components/homepage-header/server.css
+++ b/components/homepage-header/server.css
@@ -2,7 +2,6 @@
   display: grid;
 
   grid-template-areas: "copy mandala" "search mandala";
-  grid-template-columns: max-content auto;
   grid-column-end: extended-full-end; /* Make space for Mandala. */
 
   column-gap: 1rem;
